@@ -15,3 +15,6 @@ input[type="submit"]:active, input[type="button"]:active {
  background-color: #bbb;
 }
 
+:root {
+ --range-trough-color:#CCC;
+}
