@@ -28,6 +28,7 @@
 20. Fix position of tech info and rating stars in desktop bottom bar.
 21. Add setting to toggle alarm fade in.
 22. Make artist, and album, details click-able links in now-playing.
+23. Add sliders to server, etc, settings dialogs.
 
 2.3.7
 -----
